// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildQuery SQL Generation basic queries should generate minimal query with defaults 1`] = `
"SELECT
  u.*
FROM
  "users" u
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation basic queries should generate query with custom take and skip 1`] = `
"SELECT
  u.*
FROM
  "users" u
LIMIT
  100
OFFSET
  50"
`;

exports[`buildQuery SQL Generation basic queries should generate query with specific fields 1`] = `
"SELECT
  u."id",
  u."name",
  u."email"
FROM
  "users" u
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation boolean filters should generate query with boolean equals false 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  u."isActive" = false
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation boolean filters should generate query with boolean equals true 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  u."isActive" = true
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation boolean filters should generate query with boolean filter object 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."isActive" = true
    AND u."isVerified" != false
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation complex queries should generate comprehensive query with all features 1`] = `
"SELECT
  u."id",
  u."name",
  u."email",
  u."age",
  u."data"
FROM
  "users" u
WHERE
  (
    u."isActive" = true
    AND u."age" >= 18
    AND u."age" <= 65
    AND LOWER(u."name") LIKE LOWER('%john%')
    AND u."data" #> '{status}' = to_jsonb(CAST('active' AS text))
  )
  AND (
    u."email" LIKE '%@gmail.com'
    OR u."email" LIKE '%@company.com'
  )
  AND NOT (
    (
      u."email" LIKE '%spam%'
      AND u."isVerified" = false
    )
  )
ORDER BY
  (u."data" #>> '{score}')::int DESC,
  u."createdAt" DESC,
  u."name" ASC
LIMIT
  25
OFFSET
  50"
`;

exports[`buildQuery SQL Generation complex queries should generate query simulating real-world user search 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."isActive" = true
    AND (
      LOWER(u."name") LIKE LOWER('%developer%')
      OR jsonb_path_exists(
        u."data",
        '$.bio ? (@ like_regex ".*developer.*")'::jsonpath
      )
      OR jsonb_path_exists(
        u."data",
        '$.skills[*] ? (@ == $val0)'::jsonpath,
        jsonb_build_object(
          CAST('val0' AS text),
          to_jsonb(CAST('javascript' AS text))
        )::jsonb
      )
      AND jsonb_path_exists(
        u."data",
        '$.skills[*] ? (@ == $val1)'::jsonpath,
        jsonb_build_object(
          CAST('val1' AS text),
          to_jsonb(CAST('typescript' AS text))
        )::jsonb
      )
    )
    AND jsonb_path_exists(
      u."data",
      '$.experience ? (@ >= $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(3 AS numeric)))
    )
  )
  AND NOT (
    (
      u."data" #> '{status}' = to_jsonb(CAST('banned' AS text))
      OR u."data" #> '{status}' = to_jsonb(CAST('suspended' AS text))
      OR u."data" #> '{status}' = to_jsonb(CAST('inactive' AS text))
    )
  )
ORDER BY
  (u."data" #>> '{experience}')::int DESC,
  u."createdAt" DESC
LIMIT
  20
OFFSET
  0"
`;

exports[`buildQuery SQL Generation complex queries should generate query with multiple json filters on different fields 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."data" #> '{profile,verified}' = to_jsonb(CAST(true AS boolean))
    AND u."data" #> '{settings,notifications,email}' = to_jsonb(CAST(true AS boolean))
    AND u."metadata" #> '{source}' = to_jsonb(CAST('organic' AS text))
    AND jsonb_path_exists(
      u."metadata",
      '$.referrer ? (@ like_regex "^https://.*")'::jsonpath
    )
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation date filters should generate query with all date operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."createdAt" = '2024-01-01T00:00:00.000Z'
    AND u."createdAt" != '2020-01-01T00:00:00.000Z'
    AND u."createdAt" > '2023-01-01T00:00:00.000Z'
    AND u."createdAt" >= '2023-06-01T00:00:00.000Z'
    AND u."createdAt" < '2025-01-01T00:00:00.000Z'
    AND u."createdAt" <= '2024-12-31T23:59:59.999Z'
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation date filters should generate query with date equals 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  u."createdAt" = '2024-01-01T00:00:00.000Z'
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation date filters should generate query with date in/notIn arrays 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."createdAt" IN (
      '2024-01-01T00:00:00.000Z',
      '2024-06-01T00:00:00.000Z'
    )
    AND u."updatedAt" NOT IN ('2020-01-01T00:00:00.000Z')
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation json filters should generate query with all json string operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    jsonb_path_exists(
      u."data",
      '$.name ? (@ like_regex ".*john.*")'::jsonpath
    )
    AND jsonb_path_exists(
      u."data",
      '$.name ? (@ like_regex "^Jo.*")'::jsonpath
    )
    AND jsonb_path_exists(
      u."data",
      '$.name ? (@ like_regex ".*hn$")'::jsonpath
    )
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation json filters should generate query with case-insensitive json filter 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  jsonb_path_exists(
    u."data",
    '$.title ? (@ like_regex ".*manager.*" flag "i")'::jsonpath
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation json filters should generate query with json array operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    jsonb_path_exists(
      u."data",
      '$.tags[*] ? (@ == $val0)'::jsonpath,
      jsonb_build_object(
        CAST('val0' AS text),
        to_jsonb(CAST('typescript' AS text))
      )::jsonb
    )
    AND jsonb_path_exists(
      u."data",
      '$.tags[*] ? (@ == $val1)'::jsonpath,
      jsonb_build_object(
        CAST('val1' AS text),
        to_jsonb(CAST('react' AS text))
      )::jsonb
    )
    AND jsonb_path_exists(
      u."data",
      '$.skills[0] ? (@ == $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST('javascript' AS text)))
    )
    AND jsonb_path_exists(
      u."data",
      '$.languages[last] ? (@ == $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST('english' AS text)))
    )
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation json filters should generate query with json comparison operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    jsonb_path_exists(
      u."data",
      '$.score ? (@ > $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(80 AS numeric)))
    )
    AND jsonb_path_exists(
      u."data",
      '$.score ? (@ >= $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(85 AS numeric)))
    )
    AND jsonb_path_exists(
      u."data",
      '$.score ? (@ < $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(100 AS numeric)))
    )
    AND jsonb_path_exists(
      u."data",
      '$.score ? (@ <= $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(95 AS numeric)))
    )
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation json filters should generate query with json full-text search 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  jsonb_to_tsvector(
    'english',
    u."data" #> ARRAY['bio']::text[],
    '["all"]'
  ) @@ phraseto_tsquery('english', 'experienced developer')
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation json filters should generate query with json in/notIn operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    (
      u."data" #> '{role}' = to_jsonb(CAST('admin' AS text))
      OR u."data" #> '{role}' = to_jsonb(CAST('moderator' AS text))
      OR u."data" #> '{role}' = to_jsonb(CAST('editor' AS text))
    )
    AND (
      u."data" #> '{status}' != to_jsonb(CAST('banned' AS text))
      AND u."data" #> '{status}' != to_jsonb(CAST('suspended' AS text))
    )
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation json filters should generate query with json path equals 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  u."data" #> '{status}' = to_jsonb(CAST('active' AS text))
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation json filters should generate query with nested json path 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  u."data" #> '{profile,settings,theme}' = to_jsonb(CAST('dark' AS text))
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation logical operators should generate query with AND conditions 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."age" >= 18
    AND u."age" <= 65
    AND u."isActive" = true
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation logical operators should generate query with NOT array condition 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  NOT (
    u."email" LIKE '%spam%'
    AND u."email" LIKE '%test%'
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation logical operators should generate query with NOT condition 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  NOT (u."isActive" = false)
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation logical operators should generate query with OR conditions 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."email" LIKE '%@gmail.com'
    OR u."email" LIKE '%@yahoo.com'
    OR u."email" LIKE '%@outlook.com'
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation logical operators should generate query with deeply nested logical operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    (
      u."isActive" = true
      AND u."age" >= 18
      AND (
        u."data" #> '{role}' = to_jsonb(CAST('admin' AS text))
        OR u."data" #> '{role}' = to_jsonb(CAST('moderator' AS text))
      )
    )
    OR (
      u."isVerified" = true
      AND u."email" LIKE '%@company.com'
    )
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation logical operators should generate query with nested logical operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."isActive" = true
    AND (
      u."age" >= 21
      OR u."isVerified" = true
    )
  )
  AND NOT (u."email" LIKE '%spam%')
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation number filters should generate query with all number operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."age" = 30
    AND u."age" != 0
    AND u."age" > 18
    AND u."age" >= 21
    AND u."age" < 65
    AND u."age" <= 60
    AND u."salary" IN (50000, 75000, 100000)
    AND u."salary" NOT IN (0)
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation number filters should generate query with number equals 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  u."age" = 25
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation orderBy should generate query with json orderBy 1`] = `
"SELECT
  u.*
FROM
  "users" u
ORDER BY
  (u."data" #>> '{score}')::int DESC
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation orderBy should generate query with json orderBy aggregation 1`] = `
"SELECT
  u.*
FROM
  "users" u
ORDER BY
  (
    SELECT
      AVG((elem #>> '{}')::float)
    FROM
      jsonb_array_elements((u."data" #> '{prices}')::jsonb) AS elem
  ) ASC
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation orderBy should generate query with mixed orderBy types 1`] = `
"SELECT
  u.*
FROM
  "users" u
ORDER BY
  u."createdAt" DESC,
  (u."data" #>> '{priority}')::int ASC,
  u."name" ASC
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation orderBy should generate query with multiple orderBy 1`] = `
"SELECT
  u.*
FROM
  "users" u
ORDER BY
  u."isActive" DESC,
  u."name" ASC,
  u."createdAt" DESC
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation orderBy should generate query with simple orderBy asc 1`] = `
"SELECT
  u.*
FROM
  "users" u
ORDER BY
  u."name" ASC
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation orderBy should generate query with simple orderBy desc 1`] = `
"SELECT
  u.*
FROM
  "users" u
ORDER BY
  u."createdAt" DESC
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation string filters should generate query with all string operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."name" = 'John'
    AND u."name" != 'Jane'
    AND u."name" LIKE '%oh%'
    AND u."name" LIKE 'Jo%'
    AND u."name" LIKE '%hn'
    AND u."email" IN ('john@example.com', 'john@test.com')
    AND u."email" NOT IN ('spam@example.com')
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation string filters should generate query with case-insensitive string filter 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  LOWER(u."name") LIKE LOWER('%john%')
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation string filters should generate query with string comparison operators 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  (
    u."name" > 'A'
    AND u."name" >= 'B'
    AND u."name" < 'Z'
    AND u."name" <= 'Y'
  )
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation string filters should generate query with string equals 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  u."name" = 'John'
LIMIT
  50
OFFSET
  0"
`;

exports[`buildQuery SQL Generation string filters should generate query with string full-text search 1`] = `
"SELECT
  u.*
FROM
  "users" u
WHERE
  to_tsvector('english', u."name") @@ plainto_tsquery('english', 'software engineer')
LIMIT
  50
OFFSET
  0"
`;
